--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -4,12 +4,13 @@ on: [push]
 
 jobs:
   pytest:
-    name: pytest for py${{ matrix.python-version }}
+    name: pytest for py${{ matrix.python-version }} on ${{ matrix.os }}
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         python-version: [3.8, 3.9, '3.10']
+        os: ['ubuntu-latest', 'macos-latest']
 
     steps:
     - uses: actions/checkout@v2
