--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -20,7 +20,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install gmsh
       run: |
-          sudo apt-get install -y python3-gmsh
+          if [ ${{ matrix.os }} == 'ubuntu-latest' ]; then sudo apt-get install -y python3-gmsh; else brew install gmsh; fi
     - name: Install test dependencies
       run: |
         python -m pip install --upgrade pip
@@ -28,7 +28,7 @@ jobs:
         pip install flake8 pytest pytest-cov coveralls
     - name: Setup Linux Environment
       run: |
-        sudo apt-get install libglu1
+        if [ ${{ matrix.os }} == 'ubuntu-latest' ]; then sudo apt-get install libglu1; fi
     - name: Install package
       run: |
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
