--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -18,17 +18,15 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install gmsh
+    - name: Setup Environment
       run: |
-          if [ ${{ matrix.os }} == 'ubuntu-latest' ]; then sudo apt-get install -y python3-gmsh; else brew install gmsh; fi
+          if [ ${{ matrix.os }} == 'ubuntu-latest' ]; then sudo apt-get install -y python3-gmsh libglu1; fi
+          if [ ${{ matrix.os }} == 'macos-latest' ];  then brew install gmsh; fi
     - name: Install test dependencies
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel
         pip install flake8 pytest pytest-cov coveralls
-    - name: Setup Linux Environment
-      run: |
-        if [ ${{ matrix.os }} == 'ubuntu-latest' ]; then sudo apt-get install libglu1; fi
     - name: Install package
       run: |
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
