--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.8, 3.9, '3.10']
-        os: ['ubuntu-latest', 'macos-latest']
+        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
 
     steps:
     - uses: actions/checkout@v2
