--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -18,19 +18,23 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Setup Environment
-      run: |
-          if [ ${{ matrix.os }} == 'ubuntu-latest' ]; then sudo apt-get install -y python3-gmsh libglu1; fi
-          if [ ${{ matrix.os }} == 'macos-latest' ];  then brew install gmsh; fi
+        
+    - name: Setup Ubuntu environment
+      if: ${{ matrix.os }} == 'ubuntu-latest'
+      run: sudo apt-get install -y python3-gmsh libglu1
+    - name: Setup MacOS environment
+      if: ${{ matrix.os }} == 'macos-latest'
+      run: brew install gmsh
+      
     - name: Install test dependencies
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel
         pip install flake8 pytest pytest-cov coveralls
+    - name: Install package requirements
+      run: pip install -r requirements.txt
     - name: Install package
-      run: |
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install -e .
+      run: pip install -e .
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
