--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -20,10 +20,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
         
     - name: Setup Ubuntu environment
-      if: startsWith(${{ matrix.os }}, 'ubuntu')
+      if: startsWith(matrix.os, 'ubuntu')
       run: sudo apt-get install -y python3-gmsh libglu1
     - name: Setup MacOS environment
-      if: startsWith(${{ matrix.os }}, 'macos')
+      if: startsWith(matrix.os, 'macos')
       run: brew install gmsh
       
     - name: Install test dependencies
