--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -35,6 +35,7 @@ jobs:
       run: pip install -r requirements.txt
     - name: Install package
       run: pip install -e .
+      
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -42,13 +43,13 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 src tests setup.py --exclude=__init__.py --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
-      run: |
-        pytest --cov=src tests/
+      run: pytest --cov=src tests/
+      
     - name: Coveralls
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-      run: |
-        COVERALLS_FLAG_NAME="py${{ matrix.python-version }} on ${{ matrix.os }}" coveralls
+        COVERALLS_FLAG_NAME: py${{ matrix.python-version }} on ${{ matrix.os }}
+      run: coveralls
         
   package-checks:
     name: package checks
