--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pygmsh==7.0.2
 MeshPy==2018.2.1
 numpy==1.23.2
 pyquaternion==0.9.5
-pyvoro==1.3.2
+pyvoro-mmalahe==1.3.3
 scipy==1.10.1
 xmltodict==0.12.0
 tox==3.14.0
