--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -12,6 +12,7 @@ jobs:
     
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
     - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -37,19 +38,16 @@ jobs:
         if [ "${{ matrix.doc-type }}" = latex ]; then echo "art_path=docs/build-latex/MicroStructPy.pdf" >> $GITHUB_ENV; fi
         if [ "${{ matrix.doc-type }}" = epub ]; then echo "art_path=docs/build-epub/MicroStructPy.epub" >> $GITHUB_ENV; fi
         
-    - name: Build PDF
+    - name: Use LaTeX Action (latex only)
+      if: matrix.doc-type == 'latex'
+    - uses: xu-cheng/latex-action@v2
+
+    - name: Build PDF (latex only)
       if: matrix.doc-type == 'latex'
       run: |
-        # Build PDF 
-        if [ "${{ matrix.doc-type }}" = latex ]; then sudo apt install texlive-fonts-recommended; fi
-        if [ "${{ matrix.doc-type }}" = latex ]; then sudo apt install texlive-latex-recommended; fi
-        if [ "${{ matrix.doc-type }}" = latex ]; then sudo apt install texlive-lang-english; fi
-        if [ "${{ matrix.doc-type }}" = latex ]; then sudo apt install texlive-xetex; fi
-        if [ "${{ matrix.doc-type }}" = latex ]; then sudo apt install latexmk; fi
-        if [ "${{ matrix.doc-type }}" = latex ]; then cd docs/build-latex; fi
-        if [ "${{ matrix.doc-type }}" = latex ]; then make; fi
-        if [ "${{ matrix.doc-type }}" = latex ]; then cd -; fi
-        
+        cd docs/build-latex
+        make
+        cd -
         
     - name: Upload artifact
       uses: actions/upload-artifact@v3
