renamed rtd yaml

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,7 +7,7 @@ include .bumpversion.cfg
 include .coveragerc
 include .editorconfig
 include .pyup.yml
-include .readthedocs.yml
+include .readthedocs.yaml
 
 include CHANGELOG.rst
 include LICENSE.rst
