--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,6 +4,8 @@
 # Required
 version: 2
 
+formats: all
+
 # Set the OS, Python version and other tools you might need
 build:
   os: ubuntu-22.04
@@ -13,11 +15,6 @@ build:
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
   configuration: docs/source/conf.py
-
-# Optionally build your docs in additional formats such as PDF and ePub
-formats:
-    - pdf
-    - epub
 
 # Optional but recommended, declare the Python requirements required
 # to build your documentation
