--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,6 +11,8 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.8"
+  apt_packages:
+    freeglut3-dev
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
