--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ MeshPy==2022.1.3
 numpy>=1.24.4
 pyquaternion==0.9.5
 pyvoro-mmalahe==1.3.4
-scipy==1.11.3
+scipy>=1.10.1
 setuptools>=65.5.1 
 xmltodict==0.12.0
 tox==3.14.0
