--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -13,9 +13,9 @@ jobs:
         os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@main
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@main
       with:
         python-version: ${{ matrix.python-version }}
         
@@ -56,13 +56,13 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@main
     - name: Set up Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@main
       with:
         python-version: '3.x'
     - name: Cache pip
-      uses: actions/cache@v4
+      uses: actions/cache@main
       with:
         # This path is specific to Ubuntu
         path: ~/.cache/pip
