--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -29,7 +29,7 @@ jobs:
     - name: Install test dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel
+        pip install setuptools wheel pluggy
         pip install flake8 pytest pytest-cov coveralls
     - name: Install package requirements
       run: pip install -r requirements.txt
