update pytest call
following https://stackoverflow.com/a/75768202

--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -43,7 +43,7 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 src tests setup.py --exclude=__init__.py --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
-      run: pytest --cov=src tests/
+      run: python -m pytest --cov=src tests/
       
     - name: Coveralls
       env:
