--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -30,7 +30,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel pluggy
-        pip install flake8 pytest pytest-cov coveralls
+        pip install flake8 pytest pytest-metadata pytest-cov coveralls
     - name: Install package requirements
       run: pip install -r requirements.txt
     - name: Install package
