--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -31,6 +31,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install setuptools wheel pluggy
         pip install flake8 pytest pytest-metadata pytest-cov coveralls
+        echo "PYTHONPATH=$PYTHONPATH" >> $GITHUB_ENV
     - name: Install package requirements
       run: pip install -r requirements.txt
     - name: Install package
