--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -29,9 +29,9 @@ jobs:
     - name: Install test dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel pluggy
+        pip install setuptools wheel
         pip install flake8 pytest pytest-metadata pytest-cov coveralls
-        echo "PYTHONPATH=$PYTHONPATH" >> $GITHUB_ENV
+        pip install --upgrade pluggy
     - name: Install package requirements
       run: pip install -r requirements.txt
     - name: Install package
