--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ matplotlib>=3.7.3
 pybind11==2.4.3
 pygmsh==7.1.17
 MeshPy==2022.1.3
-numpy>=1.24.4
+numpy==1.24.4
 pyquaternion==0.9.5
 pyvoro-mmalahe==1.3.4
 scipy>=1.10.1
