--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -30,8 +30,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel
-        pip install flake8 pytest==6.2.5 pytest-cov coveralls
-        pip install --upgrade pluggy
+        pip install flake8 pytest pytest-cov coveralls
     - name: Install package requirements
       run: pip install -r requirements.txt
     - name: Install package
@@ -44,7 +43,7 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 src tests setup.py --exclude=__init__.py --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
-      run: python -m pytest --cov=src tests/
+      run: pytest --cov=src tests/
       
     - name: Coveralls
       env:
