--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -30,7 +30,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel
-        pip install flake8 pytest==6.2.5 pytest-cov coveralls
+        pip install flake8 pytest<8.0 pytest-cov coveralls
     - name: Install package requirements
       run: pip install -r requirements.txt
     - name: Install package
