--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,4 +5,4 @@ pybind11==2.4.3
 setuptools>=65.5.1 
 sphinx==5.3.0
 sphinx-gallery==0.8.1
-zipp==3.19.1
+zipp>=3.19.1 # not directly required, pinned by Snyk to avoid a vulnerability
