--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,4 +5,5 @@ pybind11==2.4.3
 setuptools>=70.0.0
 sphinx==5.3.0
 sphinx-gallery==0.8.1
+urllib3>=2.2.2 # not directly required, pinned by Snyk to avoid a vulnerability
 zipp>=3.19.1 # not directly required, pinned by Snyk to avoid a vulnerability
