--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,6 +2,7 @@ gmsh==4.11.1
 matplotlib>=3.7.3
 numpy>=1.24.4
 pybind11==2.4.3
+requests>=2.32.0 # not directly required, pinned by Snyk to avoid a vulnerability
 setuptools>=70.0.0
 sphinx==5.3.0
 sphinx-gallery==0.8.1
