--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -9,13 +9,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.8, 3.9, '3.10', '3.11', '3.12']
+        python-version: [3.9, '3.10', '3.11', '3.12']
         os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@main
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@main
       with:
         python-version: ${{ matrix.python-version }}
         
@@ -30,7 +30,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel
-        pip install flake8 pytest pytest-cov coveralls
+        pip install flake8 pytest==6.2.5 pytest-cov coveralls
     - name: Install package requirements
       run: pip install -r requirements.txt
     - name: Install package
@@ -56,13 +56,13 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@main
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@main
       with:
         python-version: '3.x'
     - name: Cache pip
-      uses: actions/cache@v3
+      uses: actions/cache@main
       with:
         # This path is specific to Ubuntu
         path: ~/.cache/pip
