--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,6 +2,9 @@ gmsh==4.11.1
 matplotlib>=3.7.3
 numpy>=1.24.4
 pybind11==2.4.3
-setuptools>=65.5.1 
-sphinx==4.2.0
+requests>=2.32.0 # not directly required, pinned by Snyk to avoid a vulnerability
+setuptools>=70.0.0
+sphinx==5.3.0
 sphinx-gallery==0.8.1
+urllib3>=2.2.2 # not directly required, pinned by Snyk to avoid a vulnerability
+zipp>=3.19.1 # not directly required, pinned by Snyk to avoid a vulnerability
