--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,12 @@ matplotlib>=3.7.3
 pybind11==2.4.3
 pygmsh==7.1.17
 MeshPy==2022.1.3
-numpy>=1.24.4
+numpy>=1.24.4,<2.0
 pyquaternion==0.9.5
 pyvoro-mmalahe==1.3.4
 scipy>=1.10.1
-setuptools>=65.5.1 
+setuptools>=70.0.0 
 xmltodict==0.12.0
 tox==3.14.0
 lsq-ellipse==2.0.1
+zipp>=3.19.1 # not directly required, pinned by Snyk to avoid a vulnerability
